<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright 2022 harish
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~    http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<resources>
    <string name="addhabit_appbar_title">Create new habit</string>
    <string name="addhabit_name_label">Habit name</string>
    <string name="addhabit_name_error">Enter a name for new habit</string>
    <string name="addhabit_notes_label">Notes</string>
    <string name="addhabit_notes_description">Recording the exact time and location of the new habit increases the odds of sticking to it. Avoid vague habits like \"Exercise more\".</string>
    <string name="addhabit_save">Create habit</string>

    <string name="dashboard_title">My habits</string>
    <string name="dashboard_change_layout">Change layout</string>
    <string name="dashboard_empty_label">You don\'t have any habits yet.</string>
    <string name="dashboard_toggle_help">Long press to toggle</string>
    <string name="dashboard_toggle_label_toggled">Done</string>
    <string name="dashboard_toggle_label_untoggled">Mark Done</string>
    <string name="dashboard_create_habit">Create new habit</string>
    <string name="dashboard_create_habit_first">Create your first habit</string>
    <string name="dashboard_item_details">Habit details</string>
    <string name="dashboard_error">Failed to load habit list</string>
    <string name="dashboard_error_toggle_action">Failed to save action</string>
    <string name="dashboard_error_item_move">Failed to move habit, try again</string>
    <string name="dashboard_event_action_performed">Well done!</string>
    <string name="dashboard_config_dialog_title">Choose a layout</string>
    <string name="dashboard_config_dialog_fiveday">Five day</string>
    <string name="dashboard_config_dialog_minicalendar">Mini calendar</string>
    <string name="dashboard_config_dialog_compact">Compact</string>

    <string name="common_action_count_clean">Start today</string>
    <plurals name="common_action_count_total">
        <item quantity="one">%d total</item>
        <item quantity="other">%d total</item>
    </plurals>
    <plurals name="common_action_count_streak">
        <item quantity="one">%d day streak</item>
        <item quantity="other">%d day streak</item>
    </plurals>
    <plurals name="common_action_count_missed_days">
        <item quantity="one">%d missed day</item>
        <item quantity="other">%d missed days</item>
    </plurals>

    <string name="habitdetails_singlestat_total">times total</string>
    <string name="habitdetails_singlestat_weekly">times this week</string>
    <string name="habitdetails_singlestat_completionrate">completion rate</string>
    <string name="habitdetails_archive_confirm">Archive</string>
    <string name="habitdetails_archive_title">Archive habit?</string>
    <string name="habitdetails_archive_description">This habit will be moved to the archive. If you change your mind, you can unarchive the habit without data loss, or delete it forever.</string>
    <string name="habitdetails_edit_name_label">Name</string>
    <string name="habitdetails_edit_notes_label">Notes</string>
    <string name="habitdetails_error">Failed to load habit details</string>
    <string name="habitdetails_error_stats">Failed to load habit statistics</string>
    <string name="habitdetails_actioncount_selector_label">Times a</string>
    <string name="habitdetails_actioncount_selector_weekly">Week</string>
    <string name="habitdetails_actioncount_selector_monthly">Month</string>
</resources>